--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,17 @@
 spring.application.name=submanager
 server.port=8080
 
-# DB
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/submanager_db
 spring.datasource.username=postgres
 spring.datasource.password=8294199236
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.open-in-view=false
-
-# Jackson
-spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
-
-# Actuator
-management.endpoints.web.exposure.include=health,info,metrics
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+# Hibernate 6 detecta el dialecto automáticamente; si quieres forzarlo:
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Logs
-logging.level.org.springframework.security=INFO
-
-# JWT (¡sin comentarios en la misma línea!)
-jwt.secret=V3ryL0ng_SuperSecretKey_for_SubManager_ChangeMe_2025_XXXXXXXXXXXXXXXXXXXX
-jwt.expiration=3600000
+logging.level.com.example.subsmartai=DEBUG
