--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 # Logs
 logging.level.com.example.subsmartai=DEBUG
+
+# --- Recordatorios de renovación ---
+subsmart.reminders.daysAhead=7
+# Ejecuta todos los días a las 9:00am (hora del server)
+subsmart.reminders.cron=0 0 9 * * *
