--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,21 @@ logging.level.com.example.subsmartai=DEBUG
 
 # --- Recordatorios de renovación ---
 subsmart.reminders.daysAhead=7
-# Ejecuta todos los días a las 9:00am (hora del server)
 subsmart.reminders.cron=0 0 9 * * *
+
+# --- Sugerencias de ahorro (IA simple) ---
+# umbral mensual (USD/EUR/etc) para considerar "caro"
+subsmart.savings.highCost=15
+# días sin uso para marcar como inactiva
+subsmart.savings.inactiveDays=60
+# corre todos los días a las 10:00am
+subsmart.savings.cron=0 0 10 * * *
+
+# --- Dashboard ---
+# cuántos días mirar hacia adelante
+dashboard.upcomingDays=7
+# cuántas notificaciones mostrar
+dashboard.notificationsLimit=5
+# top-N categorías por gasto mensual
+dashboard.topCategories=5
+
