--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,7 @@ dashboard.notificationsLimit=5
 # top-N categorías por gasto mensual
 dashboard.topCategories=5
 
+# Upload limits
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
